# learnings-for-claude

./: GUIDE.md  README.ko.md  README.md  install.sh  uninstall.sh  update.sh
.ai-bouncer-tasks/2026-04-04/session-review-save-patterns/: state.json
.claude/: settings.local.json
hooks/: code-lesson-check.sh  library-save-check.sh  library-sync.sh  session-start-learnings.sh
mcp-server/: pyproject.toml  server.py
scripts/: notion-library-create-db.sh  notion-library-migrate.sh  notion-library.sh
skills/code-lesson/: SKILL.md
skills/session-review/: SKILL.md
templates/: LIBRARY.md  claude-rules.md  global-claude-rules.md
tests/: install.bats
