[project]
name = "claude-library-mcp"
version = "0.1.1"
description = "Claude knowledge library MCP server"
requires-python = ">=3.11"
dependencies = ["mcp[cli]>=1.0.0"]

[project.scripts]
claude-library-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["server.py"]
